# workspace-groups-creator

./: .dockerignore  .env.example  .gitignore  Dockerfile  app.py  pyproject.toml
workspace_groups_creator/: __init__.py  mail_processor.py
