[tool.poetry]
name = "workspace-groups-creator"
version = "1.0"
description = "Automatically creates Google Workspace Groups based on catch-all e-mails in one's GMail inbox"
authors = ["Guus Huizen <guus@guus.tech>"]

[tool.poetry.dependencies]
python = "^3.8"
google-api-python-client = "^2.49.0"
python-dotenv = "^0.20.0"
oauth2client = "^4.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
